# public/swagger.yml
@@ -13,7 +13,7 @@ paths:
           in: path
           description: Course Id
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
@@ -29,7 +29,7 @@ paths:
           in: path
           description: Course Id
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
@@ -44,14 +44,29 @@ paths:
           in: path
           description: Course Id
           required: true
-          type: number
+          type: integer
+        - name: students
+          in: body
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                githubId:
+                  type: string
+                isExpelled:
+                  type: boolean
+                expellingReason:
+                  type: boolean
+                readyFullTime:
+                  type: boolean
       produces:
         - application/json
       responses:
         '200':
           description: List of students
   '/course/{courseId}/mentors':
-    post:
+    get:
       description: Saves course mentors
       security:
         - cookieAuth: []
@@ -60,13 +75,13 @@ paths:
           in: path
           description: Course Id
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
         '200':
           description: List of mentors
-    get:
+    post:
       description: Returns course mentors
       security:
         - cookieAuth: []
@@ -75,7 +90,18 @@ paths:
           in: path
           description: Course Id
           required: true
-          type: number
+          type: integer
+        - name: mentors
+          in: body
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                githubId:
+                  type: string
+                maxStudentsLimit:
+                  type: integer
       produces:
         - application/json
       responses:
@@ -91,7 +117,18 @@ paths:
           in: path
           description: Course Id
           required: true
-          type: number
+          type: integer
+        - name: pairs
+          in: body
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                studentGithubId:
+                  type: string
+                mentorGithubId:
+                  type: string
       produces:
         - application/json
       responses:
@@ -104,7 +141,7 @@ paths:
         - name: courseId
           in: path
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
@@ -113,11 +150,13 @@ paths:
   '/course/{courseId}/scores':
     post:
       description: Save course task score
+      security:
+        - cookieAuth: []
       parameters:
         - name: courseId
           in: path
           required: true
-          type: number
+          type: integer
         - name: scores
           in: body
           schema:
@@ -130,13 +169,13 @@ paths:
                 mentorGithubId:
                   type: string
                 courseTaskId:
-                  type: number
+                  type: integer
                 comment:
                   type: string
                 githubPrUrl:
                   type: string
                 score:
-                  type: number
+                  type: integer
       produces:
         - application/json
       responses:
@@ -149,7 +188,7 @@ paths:
         - name: courseId
           in: path
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
@@ -161,7 +200,7 @@ paths:
         - name: courseId
           in: path
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
@@ -174,7 +213,7 @@ paths:
         - name: courseId
           in: path
           required: true
-          type: number
+          type: integer
       produces:
         - application/json
       responses:
